--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
     margin-top: 30px;
     background-color: black;
     text-align: center;
+    color: #ffffff;
 }
 .title{
     margin-top: 30px;
@@ -41,7 +42,7 @@
     margin-right: 150px;
     margin-left: 200px;
     margin-top: 30px;
-    text-decoration: underline rgb(220,220,220);
+    text-decoration: underline #ffffff;
 }
 .title-qr{
     text-align: center;
@@ -97,4 +98,256 @@
     width: 550px;
     height: 300px;
 }
+.img_card{
+    border-radius: 20px;
+    box-shadow: 10px 5px 5px rgb(57, 56, 56);
+    margin-left: 30px;
+    margin-right: 30px;
+    width: 80%;
+  }
+  .listdiv{
+    list-style-image: url(../img/Frameic.ico);
+    margin-top: 30px;
+    line-height: 2.0;
+}
+.img_biblio{
+    margin-left: 100px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+}
+.pbiblio{
+    text-align: center;
+}
+.container-carousel1{
+    background-color: rgb(220,220,220);
+}
 
+
+
+
+/*-------------------------
+-----Timeline linha do tempo-----
+-------------------------*/
+.timeline {
+	position: relative;
+	margin-bottom: 100px;
+	z-index: 1;
+}
+
+.timeline:before {
+	display: block;
+	content: "";
+	position: absolute;
+	width: 50%;
+	height: 100%;
+	left: 1px;
+	top: 0;
+	border-right: 1px solid rgb(220,220,220);
+	z-index: -1;
+}
+
+.timeline:after {
+	display: block;
+	content: "";
+	position: absolute;
+	width: 50%;
+	height: 100px;
+	left: 1px;
+	bottom: -105px;
+	border-right: 1px dashed rgb(220,220,220);
+	z-index: -1;
+}
+
+.timeline .date-title {
+	text-align: center;
+	margin: 70px 0 50px;
+}
+
+.timeline .date-title span {
+	padding: 15px 30px;
+	font-size: 21px;
+	font-weight: 400;
+	color: #fff;
+	background: rgb(220,220,220);
+	border-radius: 5px;
+}
+
+.news-item {
+	padding-bottom: 45px;
+}
+
+.news-item.right {
+	float: right;
+	margin-top: 40px;
+}
+
+.news-item .news-content {
+	margin: 20px 30px 0 0;
+	position: relative;
+	padding: 30px;
+	padding-left: 100px;
+	background: #f5f5f5;
+	border-radius: 10px;
+	box-shadow: -5px 5px 0 rgba(0, 0, 0, 0.08);
+	-webkit-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+}
+
+.news-item:hover .news-content {
+	background: rgb(220,220,220);
+	color: #fff;
+}
+
+.news-item:hover .news-title {
+	color: black;
+}
+
+.news-item.right .news-content {
+	margin: 20px 0 0 30px;
+	box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.08);
+}
+
+.news-item .news-content:after {
+	display: block;
+	content: "";
+	position: absolute;
+	top: 50px;
+	right: -40px;
+	width: 0px;
+	height: 0px;
+	background: transparent;
+	border: 20px solid transparent;
+	border-left: 20px solid #f5f5f5;
+	-webkit-transition: border-left-color .6s ease-out;
+	transition: border-left-color .6s ease-out;
+}
+
+.news-item.right .news-content:after {
+	position: absolute;
+	left: -40px;
+	right: auto;
+	border-left: 20px solid transparent;
+	border-right: 20px solid #f5f5f5;
+	-webkit-transition: border-right-color .6s ease-out;
+	transition: border-right-color .6s ease-out;
+}
+
+.news-item:hover .news-content:after {
+	border-left-color: rgb(220,220,220);
+}
+
+.news-item.right:hover .news-content:after {
+	border-left-color: transparent;
+	border-right-color: rgb(220,220,220);
+}
+
+.news-item .news-content:before {
+	display: block;
+	content: "";
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	right: -55px;
+	top: 60px;
+	background: rgb(220,220,220);
+	border: 3px solid #fff;
+	border-radius: 50%;
+	-webkit-transition: background .3s ease-out;
+	transition: background .3s ease-out;
+}
+
+.news-item.right .news-content:before {
+	left: -55px;
+	right: auto;
+}
+
+.news-content .date {
+	position: absolute;
+	width: 80px;
+	height: 80px;
+	left: 10px;
+	text-align: center;
+	color: black;
+	-webkit-transition: color .3s ease-out;
+	transition: color .3s ease-out;
+}
+
+.news-item:hover .news-content .date {
+	color: black;
+}
+
+.news-content .date p {
+	margin: 0;
+	font-size: 48px;
+	font-weight: 600;
+	line-height: 48px;
+}
+
+.news-content .date small {
+	margin: 0;
+	font-size: 26px;
+	font-weight: 300;
+	line-height: 24px;
+}
+
+.news-content .news-title {
+	font-size: 24px;
+	font-weight: 300;
+}
+
+.news-content p {
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: 300;
+	letter-spacing: 0.02em;
+	margin-bottom: 10px;
+}
+
+.news-content .read-more,
+.news-content .read-more:hover,
+.news-content .read-more:active,
+.news-content .read-more:focus {
+	padding: 10px 0;
+	text-decoration: none;
+	font-size: 16px;
+	color: #7A7C7F;
+	line-height: 24px;
+}
+
+.news-item:hover .news-content .read-more,
+.news-item:hover .news-content .read-more:hover,
+.news-item:hover .news-content .read-more:active,
+.news-item:hover .news-content .read-more:focus {
+	color: #fff;
+}
+
+.news-content .read-more {
+	-webkit-transition: padding .3s ease-out;
+	transition: padding .3s ease-out;
+}
+
+.news-content .read-more:hover {
+	padding-left: 7px;
+}
+
+.news-content .read-more:after {
+	content: '\f054';
+	padding-left: 15px;
+	font-family: 'FontAwesome';
+	font-size: 21px;
+	line-height: 21px;
+	color: rgb(220,220,220);
+	vertical-align: middle;
+	-webkit-transition: padding .3s ease-out;
+	transition: padding .3s ease-out;
+}
+
+.news-content .read-more:hover:after {
+	padding-left: 20px;
+}
+
+.news-item:hover .news-content .read-more:after {
+	color: #fff;
+}
