--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@
 .container-game{
     margin-top: 30px;
     background-color: black;
-    text-align: center;
     color: #ffffff;
 }
 .title{
@@ -86,9 +85,11 @@
     margin-left: 100px;
 }
 .listcarousel{
+	justify-content: center;
     list-style-image: url(../img/Frameic.ico);
     margin-top: 30px;
-    margin-left: 100px;
+    margin-left: 90px;
+	margin-right: 100px;
     line-height: 3.0;
 }
 .img_carousel{
@@ -98,10 +99,16 @@
     width: 550px;
     height: 300px;
 }
+.card{
+	border-radius: 20px;
+}
+.pcard{
+	margin-top: 10px;
+}
 .img_card{
-    border-radius: 20px;
-    box-shadow: 10px 5px 5px rgb(57, 56, 56);
-    margin-left: 30px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px rgb(57, 56, 56);
+    margin-left: 15px;
     margin-right: 30px;
     width: 80%;
   }
@@ -121,18 +128,28 @@
     text-align: center;
 }
 .container-carousel1{
-    background-color: rgb(220,220,220);
+    background: linear-gradient(#ffffff, #dcdcdc);
 }
 
 .btn{
-	margin-left: 650px;
+	margin-left: 550px;
+}
+.red{
+	color: red;
+}
+.img_prologprat{
+	margin-left: 250px;
+    margin-bottom: 30px;
+    border-radius: 40px;
+    width: 550px;
+    height: 300px;
 }
 
 
 
-/*-------------------------
------Timeline linha do tempo-----
--------------------------*/
+/*-------------------------============
+---===========--Timeline linha do tempo-----
+-------------------------==============*/
 .timeline {
 	position: relative;
 	margin-bottom: 100px;
@@ -173,7 +190,7 @@
 	font-size: 21px;
 	font-weight: 400;
 	color: #fff;
-	background: rgb(220,220,220);
+	background: rgb(87, 88, 88);
 	border-radius: 5px;
 }
 
