--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,163 @@
-.section1{
-    border: 10px solid rgb(222, 247, 255);
-    border-radius: 20px;
-    box-shadow: 5px 10px rgb(145, 188, 237);
-    
+
+#wrapper {
+	background-image: url("img/Untitled (3).png");
+    width: 645px; 
+    height: 500px; 
+    margin-top: 20px;
+    margin-left: 250px;
 }
+.title-tema{
+	font-family: fantasy;
+    font: 300 40px;
+	width: 300px; 
+    padding: 30px; 
+    float: left;
+}
+.mobile {
+	float: left; 
+    position: relative;
+	box-shadow: 0 0 25px 0 rgba(231, 229, 229, 0.5);
+	overflow: hidden;
+}
+#tm {
+    display: none;
+}
+.mobile section {
+	width: 285px; 
+    height: 500px;
+	position: relative; 
+    transition: all 0.25s;
+}
+.mobile section label {
+	color: white; 
+    font-family: fantasy 14px ; 
+    text-align: center;
+	border: 2px solid white; 
+    border-radius: 4px;
+	display: block; 
+    padding: 10px 0;
+	width: 60%; 
+    position: absolute; 
+    left: 20%;
+    top: 100px;
+	cursor: pointer; 
+    text-transform: uppercase;
+}
+.sidenav {
+	background-color: #7A7C7F;
+    width: 300px;
+	position: absolute; 
+    left: 0; 
+    top: 0; 
+    bottom: 0; 
+    padding-top: 30px;
+}
+.sidenav li {
+    list-style-type: none;
+}
+.sidenav a { 
+    color: rgb(255, 255, 255); 
+	text-decoration: none;
+}
+.sidenav b {
+	font: bold 14px/48px Montserrat; 
+	display: block;
+	opacity: 0; 
+	transform: translateX(50px); 
+	transition: all 0.4s;
+}
+.sidenav i {
+	display: block; 
+    width: 30px; 
+    float: left; 
+	font-size: 16px; 
+    line-height: 48px; 
+    text-align: center;
+}
+#tm:checked ~ section {
+    transform: translateX(150px);
+}
+#tm:checked ~ .sidenav b {opacity: 1; transform: translateX(0);}
+#tm:checked ~ .sidenav li:nth-child(1) b {transition-delay: 0.08s;}
+#tm:checked ~ .sidenav li:nth-child(2) b {transition-delay: 0.16s;}
+#tm:checked ~ .sidenav li:nth-child(3) b {transition-delay: 0.24s;}
+#tm:checked ~ .sidenav li:nth-child(4) b {transition-delay: 0.32s;}
+#tm:checked ~ .sidenav li:nth-child(5) b {transition-delay: 0.40s;}
+#tm:checked ~ .sidenav li:nth-child(6) b {transition-delay: 0.48s;}
+
+
+
+/*=============================== 
+======= navigation bar ========= */
+.nav {
+    position: fixed;
+    background: rgb(243, 239, 242); 
+	box-shadow: 10px 5px 10px rgb(179, 175, 175);
+    width: 110px;
+    height: 100%;
+    left: 0; 
+    top: 0; 
+    bottom: 0; 
+}
+.nav a {
+	font: bold 14px/37px Montserrat;
+	text-align: initial;
+    display: block;
+    color: #000000;
+    padding: 10px 3px 10px;
+    text-decoration: none;
+}
+.nav a:hover {
+    background: #fdfdfd;
+    color: black;
+	box-shadow: 10px 5px 10px rgb(48, 47, 47);
+}
+/*==================================
+ ======= sections/ containers ====== */
 .section{
+	margin-left: 100px;
     margin-top: 30px;
+}
+#div-1{
+margin-left: 110px;
+
+}
+#div-8,
+#div-9,#div-10{
+	margin-left: 110px;
 }
 .container{
-    margin-top: 50px;
+	margin-left: 150px;
 }
-.img_qr{
-    margin-top: 50px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.container-bibliografia{
+	margin-left: 135px;
 }
-.d-flex{
-    margin-top: 10px;
+.container-carousel1{
+	margin-left: 100px;
+    padding-bottom:30%;
+    box-sizing: border-box;
 }
-.img_test{
-    border-radius: 30px;
-    width: 400px;
-    height: 300px;
+/*========================
+ ======= caroussel ====== */
+.carousel-control-next-icon{
+    margin-left: 120px;
+    background-color: rgb(0, 0, 0);
 }
-.container-game{
+.carousel-control-prev-icon{
+    margin-right: 120px;
+    background-color: rgb(0, 0, 0);
+}
+.listcarousel{
+	justify-content: center;
+    list-style-image: url(../img/Frameic.ico);
     margin-top: 30px;
-    background-color: black;
-    color: #ffffff;
+    margin-left: 90px;
+	margin-right: 100px;
+    line-height: 3.0;
 }
-.title{
-    margin-top: 30px;
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-decoration: underline rgb(220,220,220);
+.pcouresel{
+    margin-left: 30px;
+    margin-right: 160px;
 }
 .title-carousel{
     text-align: center;
@@ -43,7 +167,46 @@
     margin-top: 30px;
     text-decoration: underline #ffffff;
 }
-.title-qr{
+.subtitle{
+    text-align: center;
+    margin-top: 30px;
+    margin-left: 100px;
+}
+
+
+/*===================== 
+======= imagens ====== */
+
+.img_carousel{
+	margin-left: 350px;
+	margin-bottom: 10px;
+
+}
+.img_card{
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px rgb(57, 56, 56);
+    margin-left: 15px;
+    margin-right: 30px;
+    width: 80%;
+}
+.img_prologprat{
+	margin-left: 250px;
+    margin-bottom: 30px;
+    border-radius: 40px;
+    width: 550px;
+    height: 300px;
+}
+.img_biblio{
+	border-radius: 5px;
+    width: 80%;
+
+  
+}
+/*===================== 
+=== titulos/listas ====== */
+
+.title{
+    margin-top: 30px;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-decoration: underline rgb(220,220,220);
@@ -54,50 +217,10 @@
 .offcanvas-title{
     font-family: fantasy;
 }
-.pcouresel{
-    margin-left: 30px;
-    margin-right: 160px;
-}
-/* -----BOX-------
-.container-carousel{
+.listdiv{
+    list-style-image: url(../../img/Frameic.ico);
     margin-top: 30px;
-    border-style: solid;
-    border-radius: 30px;
-    border-color: rgb(220,220,220);
-    margin-left: 50px;
-    margin-right: 50px;
-    box-shadow: 10px 5px 5px rgb(57, 56, 56);
-}
-*/
-.carousel-control-next-icon{
-    margin-left: 30px;
-    border-radius: 10px;
-    background-color: rgb(220,220,220);
-}
-.carousel-control-prev-icon{
-    margin-right: 60px;
-    border-radius: 10px;
-    background-color: rgb(220,220,220);
-}
-.subtitle{
-    text-align: center;
-    margin-top: 30px;
-    margin-left: 100px;
-}
-.listcarousel{
-	justify-content: center;
-    list-style-image: url(../img/Frameic.ico);
-    margin-top: 30px;
-    margin-left: 90px;
-	margin-right: 100px;
-    line-height: 3.0;
-}
-.img_carousel{
-    margin-left: 400px;
-    margin-bottom: 30px;
-    border-radius: 30px;
-    width: 550px;
-    height: 300px;
+    line-height: 2.0;
 }
 .card{
 	border-radius: 20px;
@@ -105,46 +228,26 @@
 .pcard{
 	margin-top: 10px;
 }
-.img_card{
-    border-radius: 5px;
-    box-shadow: 5px 5px 5px rgb(57, 56, 56);
-    margin-left: 15px;
-    margin-right: 30px;
-    width: 80%;
-  }
-  .listdiv{
-    list-style-image: url(../img/Frameic.ico);
-    margin-top: 30px;
-    line-height: 2.0;
-}
-.img_biblio{
-    margin-left: 100px;
-    margin-bottom: 30px;
-    border-radius: 5px;
-    width: 100px;
-    height: 100px;
-}
 .pbiblio{
     text-align: center;
-}
-.container-carousel1{
-    background: linear-gradient(#ffffff, #dcdcdc);
 }
 
 .btn{
 	margin-left: 550px;
 }
+.exemplo{
+	border: solid;
+	border-color: #ffffff;
+	
+}
 .red{
+	font-family: "Source Code Pro", monospace;
+  	font-optical-sizing: auto;
+  	font-weight: bold;
+  	font-style: normal;
+	margin-left: 20px;
 	color: red;
 }
-.img_prologprat{
-	margin-left: 250px;
-    margin-bottom: 30px;
-    border-radius: 40px;
-    width: 550px;
-    height: 300px;
-}
-
 
 
 /*-------------------------============
